--- a/StringFunApp.Solution/StringFunApp/StringFunApp.UWP/StringFunApp.UWP.csproj
+++ b/StringFunApp.Solution/StringFunApp/StringFunApp.UWP/StringFunApp.UWP.csproj
@@ -166,8 +166,8 @@
     <PackageReference Include="Xam.Plugin.Connectivity">
       <Version>3.2.0</Version>
     </PackageReference>
-    <PackageReference Include="Xamarin.Forms" Version="3.3.0.912540" />
-    <PackageReference Include="Microsoft.NETCore.UniversalWindowsPlatform" Version="6.1.5" />
+    <PackageReference Include="Xamarin.Forms" Version="3.4.0.1009999" />
+    <PackageReference Include="Microsoft.NETCore.UniversalWindowsPlatform" Version="6.1.9" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\StringFunApp\StringFunApp.csproj">
