--- a/StringFunApp.Solution/StringFunApp/StringFunApp.Android/Properties/AndroidManifest.xml
+++ b/StringFunApp.Solution/StringFunApp/StringFunApp.Android/Properties/AndroidManifest.xml
@@ -1,5 +1,6 @@
-<?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionCode="1" android:versionName="1.0" package="com.companyname.StringFunApp">
-    <uses-sdk android:minSdkVersion="21" android:targetSdkVersion="27" />
-    <application android:label="StringFunApp.Android"></application>
+﻿<?xml version="1.0" encoding="utf-8"?>
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionCode="1" android:versionName="1.0" package="be.staproeselare.stringfun" android:installLocation="auto">
+	<uses-sdk android:minSdkVersion="21" android:targetSdkVersion="27" />
+	<uses-permission android:name="android.permission.INTERNET" />
+	<application android:label="StringFun" android:icon="@drawable/iconm"></application>
 </manifest>
