--- a/StringFunApp.Solution/StringFunApp/StringFunApp.Android/StringFunApp.Android.csproj
+++ b/StringFunApp.Solution/StringFunApp/StringFunApp.Android/StringFunApp.Android.csproj
@@ -56,6 +56,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="System.Drawing.Common">
+      <Version>4.5.1</Version>
+    </PackageReference>
     <PackageReference Include="Xam.Plugin.Connectivity">
       <Version>3.2.0</Version>
     </PackageReference>
