--- a/StringFunApp.Solution/StringFunApp/StringFunApp.UWP/StringFunApp.UWP.csproj
+++ b/StringFunApp.Solution/StringFunApp/StringFunApp.UWP/StringFunApp.UWP.csproj
@@ -170,6 +170,9 @@
     </Page>
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="System.Drawing.Common">
+      <Version>4.5.1</Version>
+    </PackageReference>
     <PackageReference Include="Xam.Plugin.Connectivity">
       <Version>3.2.0</Version>
     </PackageReference>
