--- a/StringFunApp.Solution/StringFunApp/StringFunApp.iOS/StringFunApp.iOS.csproj
+++ b/StringFunApp.Solution/StringFunApp/StringFunApp.iOS/StringFunApp.iOS.csproj
@@ -150,6 +150,9 @@
     <Reference Include="Xamarin.iOS" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="System.Drawing.Common">
+      <Version>4.5.1</Version>
+    </PackageReference>
     <PackageReference Include="Xam.Plugin.Connectivity">
       <Version>3.2.0</Version>
     </PackageReference>
