--- a/StringFunApp.Solution/StringFunApp/StringFunApp.UWP/StringFunApp.UWP.csproj
+++ b/StringFunApp.Solution/StringFunApp/StringFunApp.UWP/StringFunApp.UWP.csproj
@@ -176,8 +176,10 @@
     <PackageReference Include="Xam.Plugin.Connectivity">
       <Version>3.2.0</Version>
     </PackageReference>
-    <PackageReference Include="Xamarin.Forms" Version="3.5.0.169047" />
     <PackageReference Include="Microsoft.NETCore.UniversalWindowsPlatform" Version="6.1.9" />
+    <PackageReference Include="Xamarin.Forms">
+      <Version>3.5.0.169047</Version>
+    </PackageReference>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\StringFunApp\StringFunApp.csproj">
