--- a/StringFunApp.Solution/StringFunApp/StringFunApp.iOS/StringFunApp.iOS.csproj
+++ b/StringFunApp.Solution/StringFunApp/StringFunApp.iOS/StringFunApp.iOS.csproj
@@ -156,7 +156,9 @@
     <PackageReference Include="Xam.Plugin.Connectivity">
       <Version>3.2.0</Version>
     </PackageReference>
-    <PackageReference Include="Xamarin.Forms" Version="3.6.0.220655" />
+    <PackageReference Include="Xamarin.Forms">
+      <Version>3.5.0.169047</Version>
+    </PackageReference>
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.CSharp.targets" />
   <ItemGroup>
